workspace = { members = ["flv", "rx", "utils"] }
[package]
name = "blzbj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "utils"}
rx = {path = "rx"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
md5 = "0.7.0"
