[package]
name = "blbl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
url = "2"
md5 = "0.7.0"
stream_core = {path = "../stream_core" }
async-trait = "0.1.81"
tokio = {version =  "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
parking_lot = "0.12"