[package]
name = "flv"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bytes = "1.6"
nom = "7"
utils = { path = "../utils" }
byteorder = "1.5.0"
tracing = "0.1.40"
reqwest = "0.12.4"
anyhow = "1.0.82"
url = "2.5.0"
chrono = "0.4.38"