[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
parking_lot = "0.12"
async-trait = "0.1"
regex = "1.10.4"
reqwest = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.37.0"
