[package]
name = "flv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1.78"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_enum = "0.5"
futures-util = {version = "0.3.30"}
blake3 = "1.3.0"
nom = "7.1.3"