[package]
name = "flv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1.78"
thiserror = "1.0"
log = "0.4"
indexmap = "2.2.5"
chrono = "0.4"
async-recursion = '0.3.2'
serde = { version = "1.0", features = ["derive", "rc"] }
num_enum = "0.7.2"
[dev-dependencies]
tokio-test = "0.4.4"
